# support_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: support-server.yaml
.roo/rules/: specify-rules.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
config/: default.toml
specs/001-2-error-report/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-2-error-report/checklists/: requirements.md
specs/001-2-error-report/contracts/: error-report.md  error-report.yaml
specs/001-test-functionality/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-test-functionality/checklists/: requirements.md
specs/001-test-functionality/contracts/: error-report.md  error-report.yaml
src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  state.rs  telegram.rs
src/api/: error_report.rs  mod.rs
src/middleware/: auth.rs
src/models/: error_report.rs  error_response.rs  message_cache.rs  mod.rs
src/services/: error_report_service.rs  mod.rs
tests/unit/: cache_tests.rs  mod.rs  service_tests.rs
