[package]
name = "support-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
headers = "0.4"
validator = { version = "0.18", features = ["derive"] }
sha2 = "0.10"
